objects/CorpSDR_Demo_Questionaire__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CorpSDR Demo Questionaires (Account Name)</relationshipLabel>
        <relationshipName>CorpSDR_Demo_Questionaires1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Are_you_evaluating_marketing_vendors__c</fullName>
        <label>Are you evaluating marketing vendors?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COMPANY_OWNED__c</fullName>
        <label>COMPANY OWNED</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Demo_Questionaire__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Demo Questionaire</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CorpSDR Demo Questionaires</relationshipLabel>
        <relationshipName>CorpSDR_Demo_Questionaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DIRECT_vs_DEALER__c</fullName>
        <label>DIRECT vs. DEALER</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Demo_Date_Time__c</fullName>
        <label>Demo Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Direct_Email__c</fullName>
        <label>Direct Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Direct_Phone_Number__c</fullName>
        <label>Direct Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Do_you_currently_work_with_a_vendor__c</fullName>
        <label>Do you currently work with a vendor?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FRANCHISE__c</fullName>
        <label>FRANCHISE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>How_many_locations_do_they_have__c</fullName>
        <label>How many locations do they have?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Length_of_time_in_role__c</fullName>
        <label>Length of time in role</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Funds__c</fullName>
        <label>Marketing Funds</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate Funded</fullName>
                </value>
                <value>
                    <fullName>Location Funded</fullName>
                </value>
                <value>
                    <fullName>Combination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Function__c</fullName>
        <label>Role Function</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_does_the_company_do__c</fullName>
        <label>What does the company do?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_is_the_segment__c</fullName>
        <label>What is the segment?</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_your_current_digital_marketing__c</fullName>
        <label>What is your current digital marketing?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_markets_are_most_important__c</fullName>
        <label>What markets are most important?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Who_is_the_meeting_with__c</fullName>
        <label>Who is the meeting with?</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <description>Used by the SDR to capture information about a prospect before the opportunity is created</description>
    <label>CorpSDR Demo Questionaire</label>
    <nameField>
        <label>CorpSDR Demo Questionaire Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CorpSDR Demo Questionaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LHMA_Post_Launch_CorpSDR_Demo_Questionaire</fullName>
        <filterScope>Queue</filterScope>
        <label>LHMA Post Launch</label>
        <queue>LHMA_Post_Launch</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Rogers_Support_CorpSDR_Demo_Questionaire</fullName>
        <filterScope>Queue</filterScope>
        <label>Rogers Support</label>
        <queue>Rogers_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>